# script_builder

./: .env.example  .gitignore  README.md  claude.md  filelist.txt  pyproject.toml
.cursor/rules/: scripts.mdc
scripts/: claude_agent_demo.py  clear_cache.py  daily_report_automation.py  drawing_comparison_agent.py  floorplan_object_counter.py  open_agent.py  research_agent.py  tender_agent.py  tender_finder.py  test_step_logger.py  test_structured_output.py  video_annotator.py  video_editor.py  video_generator.py
utils/: __init__.py  io.py  search.py  step_logger.py  token_tracking.py
utils/ai/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
utils/tools/: __init__.py  search.py  structured_extraction.py  video_tools.py
writing/: blog_post_floorplan_benchmark.md
writing/floorplan_analysis/: analysis.json  blog_post_floorplan_benchmark.md  linkedin_post.md
